# WH_Youtube

./: .gitignore  README.md  REQUIREMENTS.md  pyproject.toml  test_genai.py  test_planner.py
docs/: infrastructure_setup_guide.md
docs/guidelines/: ai_image_providers_comparison.md  monetization_and_usage.md
docs/roadmap/: 01_future_architecture_and_features.md  02_phase_d_ai_video_generation.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ChatPanel.jsx  ProjectList.jsx  ScriptEditor.jsx  VideoPreview.jsx
server/: app.py
server/routers/: chat.py  projects.py  script.py  upload.py  video.py
server/services/: jobs.py  pipeline.py
src/: main.py
src/agents/: collector.py  planner.py
src/engine/: editor.py  narrator.py
voicevox/: docker-compose.yml
